@@ -1,21 +1,48 @@
 if (loglvl) print("--> Bf.js");
 
-var bf = new Bf();
+var bf = new Bf(0,0);
 ack("typeof bf;", "object");
 ack("bf instanceof Bf;", true);
-// ack("bf = 1;", 1);
-// ack("bf = 0;", 0);
-
-ack("bf.add('foo');", true);
-ack("bf.add('bar');", true);
-
-ack("bf.chk('foo');", true);
-ack("bf.chk('bar');", true);
-ack("bf.chk('baz');", false);
-
-ack("bf.del('bar');", true);
-ack("bf.del('foo');", true);
+// ack("bf.debug = 1;", 1);
+// ack("bf.debug = 0;", 0);
 
 ack("bf.clr();", true);
+
+var a = new Bf(3 * 1024, 8);
+ack("a.add('foo');", true);
+ack("a.chk('foo');", true);
+ack("a.chk('bar');", false);
+ack("a.chk('baz');", false);
+
+var b = new Bf(3 * 1024, 8);
+ack("b.add('bar');", true);
+ack("b.chk('foo');", false);
+ack("b.chk('bar');", true);
+ack("b.chk('baz');", false);
+
+var c = new Bf(3 * 1024, 8);
+ack("c.chk('foo');", false);
+ack("c.chk('bar');", false);
+ack("c.chk('baz');", false);
+
+ack("c.union(a);", true);
+ack("c.chk('foo');", true);
+ack("c.chk('bar');", false);
+ack("c.chk('baz');", false);
+
+ack("c.union(b);", true);
+ack("c.chk('foo');", true);
+ack("c.chk('bar');", true);
+ack("c.chk('baz');", false);
+
+ack("c.del('foo');", true);
+ack("c.chk('foo');", false);
+ack("c.chk('bar');", true);
+ack("c.chk('baz');", false);
+
+ack("c.del('bar');", true);
+ack("c.chk('foo');", false);
+ack("c.chk('bar');", false);
+ack("c.chk('baz');", false);
 
 if (loglvl) print("<-- Bf.js");
