@@ -1,5 +1,6 @@
 
 5.2b1 -> 5.3a1
+    - jbj: rpmbf: add union/intersect of filters.
     - jbj: rpmfc: reduce the amount of debugging noise with lots of files.
     - jbj: rpmbf: use lookup3.c hash pairs with k linear combinations.
     - jbj: rpmbf: stub-in a Bloom filter.
